# votingai

./: README.md  pyproject.toml  run_benchmarks.py
src/votingai/: __init__.py
src/votingai/core/: base_voting_system.py
src/votingai/research/: benchmarking_suite.py
src/votingai/utilities/: __init__.py  configuration_management.py  model_providers.py
tests/: test_model_providers.py  test_security.py  test_voting_strategies.py
