[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "votingai"
version = "1.0.3"
description = "VotingAI: Democratic Multi-Agent Systems"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Tejas Dharani", email = "tejas.dharani10@gmail.com"}
]
maintainers = [
    {name = "Tejas Dharani", email = "tejas.dharani10@gmail.com"}
]
license = {text = "MIT"}
keywords = ["votingai", "voting", "multi-agent", "consensus", "ai", "agents", "democracy", "autogen", "openai", "anthropic", "claude"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Communications",
    "Framework :: AsyncIO"
]
dependencies = [
    "aiofiles>=24.1.0",
    "anthropic>=0.40.0",
    "autogen-agentchat>=0.4.0",
    "autogen-core>=0.4.0",
    "autogen-ext[openai,anthropic]>=0.4.0",
    "crewai>=0.165.1",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.30",
    "langgraph>=0.6.6",
    "matplotlib>=3.10.5",
    "numpy>=2.2.6",
    "openai>=1.99.0", # Latest version supports GPT-5
    "openai-swarm>=0.1.1",
    "pandas>=2.3.1",
    "psutil>=7.0.0",
    "seaborn>=0.13.2",
    "types-aiofiles>=24.1.0.20250809",
]

[project.urls]
Homepage = "https://github.com/tejas-dharani/votingai"
Repository = "https://github.com/tejas-dharani/votingai.git"
Issues = "https://github.com/tejas-dharani/votingai/issues"
Changelog = "https://github.com/tejas-dharani/votingai/blob/main/CHANGELOG.md"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0", 
    "pytest-cov>=4.0",
    "pytest-xdist>=3.0",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
    "mypy>=1.0",
    "bandit[toml]>=1.7.0",
    "poethepoet>=0.20.0",
]
docs = [
    "sphinx>=6.0",
    "sphinx-rtd-theme>=1.2.0",
    "myst-parser>=0.18.0",
]

[tool.poe.tasks]
fmt.help = "Format code with ruff"
fmt.cmd = "ruff format src tests"

lint.help = "Lint code with ruff"
lint.cmd = "ruff check --fix src tests"

lint-ci.help = "Lint code for CI (no fixes applied)"
lint-ci.cmd = "ruff check src tests"

pyright.help = "Run pyright type checker"
pyright.cmd = "pyright src tests"

mypy.help = "Run mypy type checker"
mypy.cmd = "mypy src tests"

test.help = "Run tests with coverage"
test.cmd = "pytest -n auto --cov=src --cov-report=term-missing --cov-report=xml tests"

security.help = "Run security checks"
security.cmd = "bandit -r src tests --skip B101"

check.help = "Run all code quality checks"
check.sequence = [
    "fmt",
    "lint-ci", 
    "pyright",
    "mypy",
    "test",
    "security"
]

build.help = "Build package"
build.cmd = "python -m build"

clean.help = "Clean build artifacts"
clean.cmd = """
rm -rf build/ dist/ *.egg-info/ .coverage htmlcov/ .pytest_cache/ .mypy_cache/ .ruff_cache/
find . -name __pycache__ -exec rm -rf {} +
"""

# Ruff configuration
[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "B", "Q", "I", "ASYNC", "T20"]
ignore = ["F401", "E501"]


[tool.ruff.format]
docstring-code-format = true

# Pyright configuration
[tool.pyright]
include = ["src", "tests"]
exclude = [
    "**/node_modules",
    "**/__pycache__",
    "samples/core_xlang_hello_python_agent/protos"
]
pythonVersion = "3.10"
pythonPlatform = "Linux"
typeCheckingMode = "strict"

# MyPy configuration
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
explicit_package_bases = true
namespace_packages = true

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = false

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--asyncio-mode=auto",
    "--cov=src",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml"
]
asyncio_mode = "auto"

# Coverage configuration
[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/venv/*",
    "*/migrations/*",
    "samples/core_xlang_hello_python_agent/protos/*"
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "build>=1.3.0",
    "twine>=6.1.0",
]
